--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hi~
+<html>
+  <head>
+    <title>Tim's world</title>
+  </head>
+  <body>
+    <h1>Hi~ I am Tim Qian. This is my first website in my life. I am happy about it!</h1>
+  </body>
+</html>
